--- a/fullscreen-rating/rating.css
+++ b/fullscreen-rating/rating.css
@@ -18,7 +18,6 @@ a {
   text-decoration: none;
   text-transform: uppercase;
   color: #fff;
-  height: 100%;
 }
 
 footer {
@@ -32,7 +31,7 @@ footer {
 }
 
 .outer {
-  background-color: #fff;
+  background-color: #FFFFFF;
   top: 0;
   bottom: 0;
   left: 0;
@@ -93,27 +92,31 @@ footer {
 .button-center {
   background-color: #3CCE93;
   border-radius: 5px;
-  position: relative;
   width: 100%;
   height: 100%;
 }
 
+.button-center a {
+  display: table;
+  height: 100%;
+  width: 100%;
+}
+
 .button-center p {
-  margin: 0;
   position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .rate-the-stars {
   color: #222222;
   font-size: 13px;
-  margin: 0;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%)
+  left: 0;
+  top: 30px;
+  right: 0;
+  bottom: 0;
+  margin: auto;
 }
 
 .stars {
@@ -147,18 +150,19 @@ footer {
 
   footer {
     padding: 0px 12px 12px 12px;
+    border-radius: 0px 0px 10px 10px;
   }
 
   .outer {
     border-radius: 10px;
-    overflow: hidden;
     width: 45%;
     height: 50%;
-    margin: 0;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
   }
 
   .button-close {
