--- a/modal-main/main.css
+++ b/modal-main/main.css
@@ -5,7 +5,6 @@
 }
 
 body {
-
   -webkit-text-size-adjust: 100%;
   font-family: Avenir-Book, sans-serif;
   color: #222222;
@@ -18,11 +17,13 @@ a {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
-  color: #fff;
-  height: 100%;
+  color: #FFFFFF;
 }
 
 footer {
+  background-color: #FFFFFF;
+  border-radius: 0px 0px 10px 10px;
+  position: absolute;
   font-family: Avenir-Black;
   font-size: 15px;
   letter-spacing: 0.02em;
@@ -34,32 +35,30 @@ footer {
 .outer {
   /* To change the background color of the modal, change the rgba configuration.  The last parameter (0.8) configures the opacity. */
   background-color: rgba(0,0,0,0.8);
+  position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  position: absolute;
 }
 
 .modal {
-  background-color: #FFFFFF;
   border-radius: 10px;
-  overflow: hidden;
   position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  margin: auto;
   width: 85%;
   height: 70%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 
 .top-container {
   /* Change the background-image url to a image of your choice */
   background-image: url('background-dark-blue.png');
   background-size: cover;
+  border-radius: 10px 10px 0px 0px;
   width: 100%;
   height: 45%;
   padding: 22px;
@@ -70,11 +69,6 @@ footer {
   z-index: 99;
   right: 12px;
   top: 12px;
-}
-
-.main-image {
-  border-radius: 15px;
-  overflow: hidden;
 }
 
 .header {
@@ -89,6 +83,7 @@ footer {
 }
 
 .bottom-container {
+  background-color: #FFFFFF;
   overflow: hidden;
   width: 100%;
   height: 43%;
@@ -98,16 +93,20 @@ footer {
 .button-center {
   background-color: #3CCE93;
   border-radius: 5px;
-  position: relative;
   width: 100%;
   height: 100%;
 }
 
+.button-center a {
+  display: table;
+  height: 100%;
+  width: 100%;
+}
+
 .button-center p {
-  margin: 0;
   position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+  vertical-align: middle;
+  display: table-cell;
 }
 
 /* Smaller Devices (iPhone 5, etc) */
