--- a/modal-rating/rating.css
+++ b/modal-rating/rating.css
@@ -17,12 +17,12 @@ a {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
-  color: #fff;
-  height: 100%;
+  color: #FFFFFF;
 }
 
 footer {
   background-color: #EFEFEF;
+  border-radius: 0px 0px 10px 10px;
   font-family: Avenir-Black;
   font-size: 15px;
   letter-spacing: 0.02em;
@@ -32,6 +32,7 @@ footer {
 }
 
 .outer {
+  background-color: #FFFFFF;
   /* To change the background color of the modal, change the rgba configuration.  The last parameter (0.8) configures the opacity. */
   background-color: rgba(0,0,0,0.8);
   top: 0;
@@ -42,9 +43,7 @@ footer {
 }
 
 .modal {
-  background-color: #FFFFFF;
   border-radius: 10px;
-  overflow: hidden;
   position: absolute;
   left: 0;
   top: 0;
@@ -56,9 +55,11 @@ footer {
 }
 
 .top-container {
+  background-color: #FFFFFF;
   /* Change the background-image url to a image of your choice */
   background-image: url('');
   background-size: cover;
+  border-radius: 10px 10px 0px 0px;
   width: 100%;
   height: 50%;
   padding: 22px;
@@ -95,7 +96,6 @@ footer {
 
 .bottom-container {
   background-color: #EFEFEF;
-  overflow: hidden;
   position: relative;
   width: 100%;
   height: 38%;
@@ -105,27 +105,31 @@ footer {
 .button-center {
   background-color: #3CCE93;
   border-radius: 5px;
-  position: relative;
   width: 100%;
   height: 100%;
 }
 
+.button-center a {
+  display: table;
+  height: 100%;
+  width: 100%;
+}
+
 .button-center p {
-  margin: 0;
   position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+  display: table-cell;
+  vertical-align: middle;
 }
 
 .rate-the-stars {
   color: #222222;
   font-size: 13px;
-  margin: 0;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%)
+  left: 0;
+  top: 30px;
+  right: 0;
+  bottom: 0;
+  margin: auto;
 }
 
 .stars {
